--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mariadb://localhost:3306/School_NT
+spring.datasource.url=jdbc:mariadb://localhost:3306/School_NT_2
 spring.datasource.username=root
 spring.datasource.password=123
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
